# stellarmaps

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  commitlint.config.cjs  commitlint.config.js  electron-off.sh  electron-on.sh  electron.vite.config.ts  eslint.config.js  forge.config.ts  generate-changelog.sh  index.html  knip.json  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  svelte.config.mjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.electron-main.config.ts  vite.electron-preload.config.ts  vite.electron-renderer.config.ts
.github/workflows/: debug-build.yml  debug.yml  main.yml
patches/: @types+geojson+7946.0.14.patch
scripts/: electron-dev.js  update-intl.js
src/: App.svelte  app.css  app.html  app.postcss  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.electron-build.conf.json  tauri.electron-dev.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/electron-frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lexer.rs  main.rs  parser.rs
src/customTypings/: d3-path.d.ts  pathkit-wasm.d.ts
src/customTypings/@turf/: helpers.d.ts  turf.d.ts
src/electron/: main.ts  preload.cjs
src/intl/: en-US.ts  zh-TW.ts
src/lib/: AppSettingsModal.svelte  ApplyChangesButton.svelte  ColorSettingAdjustmentControl.svelte  ColorSettingControl.svelte  ExportModal.svelte  GameState.ts  IconSettingControl.svelte  Map.svelte  MapSettingControl.svelte  MapSvg.svelte  ORBITRON_BASE64.ts  ReprocessButton.svelte  ReprocessIcon.svelte  ReprocessMapBadge.svelte  Sidebar.svelte  StrokeSettingControl.svelte  colors.ts  constants.ts  convertBlobToDataUrl.ts  convertSvgToPng.ts  debug.ts  loadColors.ts  loadStellarisData.ts  mapSettings.ts  parseSave.ts  processMapData.ts  stellarMapsApi.ts  tauriCommands.ts  utils.ts
src/lib/SettingControl/: ColorSettingAdjustmentControl.svelte  ColorSettingControl.svelte  IconSettingControl.svelte  StrokeSettingControl.svelte  index.svelte
src/lib/icons/: Discord.svelte  GitHub.svelte  HeroiconArrowPathOutline.svelte  HeroiconArrowPathRoundedSquareMini.svelte  HeroiconArrowsPointingOut.svelte  HeroiconCog6ToothSolid.svelte  HeroiconInfoMini.svelte  HeroiconPaintBrushMini.svelte  HeroiconTrashMini.svelte  HeroiconUserMicro.svelte
src/lib/map/: BypassLinks.svelte  CountryBorders.svelte  CountryLabels.svelte  Glow.svelte  Hyperlanes.svelte  Icons.svelte  Legend.svelte  Map.svelte  MapContainer.svelte  MapModePaths.svelte  MapTooltip.svelte  OccupationPatternDefs.svelte  SystemIcons.svelte  TerraIncognita.svelte  TerraIncognitaDefs.svelte  Wormholes.svelte  mapUtils.ts
src/lib/map/data/: processBorders.ts  processBypassLinks.ts  processCircularGalaxyBorder.ts  processEmblems.ts  processHyperRelays.ts  processLabels.ts  processMapData.ts  processNames.ts  processPolygons.ts  processSystemCoordinates.ts  processSystemOwnership.ts  processSystems.ts  processTerraIncognita.ts  processVoronoi.ts  processWormholes.ts  smoothing.ts  utils.ts
src/lib/map/solarSystemMap/: SolarSystemMap.svelte
src/lib/map/starScape/: renderStarScape.ts
src/lib/settings/: ColorSetting.ts  IconSetting.ts  appSettings.ts  index.ts  utils.ts
src/lib/settings/options/: colorDynamicOptions.ts  countryOptions.ts  emptyOptions.ts  fontOptions.ts  iconOptions.ts  unionOptions.ts
src/main/: fsUtils.ts  index.ts  loadColors.ts  loadEmblem.ts  loadFonts.ts  loadLoc.ts  loadSave.ts  loadSaveMetadata.ts  loadStellarisInstallDir.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte
src/renderer/src/intl/: en-US.ts  fi-FI.ts  index.ts  ja-JP.ts  zh-TW.ts
src/renderer/src/lib/: AppSettingsModal.svelte  ApplyChangesButton.svelte  ColorSettingAdjustmentControl.svelte  ColorSettingControl.svelte  ExportModal.svelte  GameState.ts  IconSettingControl.svelte  MapSettingControl.svelte  ReprocessMapBadge.svelte  (+13 more)
src/routes/: +layout.svelte  +page.svelte
src/shared/: StellarMapsApi.ts  parseSave.ts
static/: magick.js  magickApi.js
(+76 files in other folders)
