[package]
name = "stellarmaps"
version = "0.10.0-dev"
description = "Stellaris map renderer"
authors = ["Michael Moore"]
license = ""
repository = ""
default-run = "stellarmaps"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "shell-open", "dialog-save", "fs-write-file", "dialog-open", "path-all", "os-all"] }
zip = "0.6.6"
regex = "1.9.3"
anyhow = "1.0.75"
font-kit = "0.11.0"
opener = { version = "0.6.1", features = ["reveal"] }
steamlocate = "2.0.0-beta.2"
image = "0.24.8"
base64 = "0.21.7"
image_dds = { version = "0.4.0", default-features = false, features = ["ddsfile", "image", "decode"] }
ddsfile = "0.5.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
