[package]
name = "stellarmaps"
version = "0.11.1"
description = "Stellaris map renderer"
authors = ["Michael Moore"]
license = ""
repository = ""
default-run = "stellarmaps"
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.6"
regex = "1.9.3"
anyhow = "1.0.75"
font-kit = "0.11.0"
opener = { version = "0.6.1", features = ["reveal"] }
steamlocate = "2.0.0-beta.2"
image = "0.24.8"
base64 = "0.21.7"
image_dds = { version = "0.4.0", default-features = false, features = ["ddsfile", "image", "decode"] }
ddsfile = "0.5.2"
logos = "0.14.0"
tauri = { version = "1.6", features = [ "fs-read-file", "fs-exists", "fs-create-dir", "dialog-open", "dialog-save", "fs-write-file", "os-all", "path-all", "shell-open"] }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rayon = "1.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
assert-json-diff = "2.0.2"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
