[package]
name = "stellarmaps"
version = "0.13.0-dev"
description = "Stellaris map renderer"
authors = ["Michael Moore"]
license = ""
repository = ""
default-run = "stellarmaps"
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.6"
regex = "1.9.3"
anyhow = "1.0.75"
font-kit = "0.11.0"
opener = { version = "0.6.1", features = ["reveal"] }
steamlocate = "2.0.0-beta.2"
image = "0.24.8"
base64 = "0.21.7"
image_dds = { version = "0.4.0", default-features = false, features = ["ddsfile", "image", "decode"] }
ddsfile = "0.5.2"
logos = "0.14.0"
tauri = { version = "2", features = [] }
rayon = "1.10.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
dirs = "5.0.1"
tauri-invoke-http = "2.0.0-rc.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
electron = []

[dev-dependencies]
assert-json-diff = "2.0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
